Verif/Test/Invalide/test_erreur_3.72-79.deca
// Description:
//    Programme soulevant l'erreur (3.72)
// Resultats:
//    Erreur contextuelle
//    Ligne 20 : Les types 'type_classe(A)' et 'int' sont incompatibles avec l'opérateur binaire '*' (règle 3.72)
//
// Attributs: exec correct automatique
//
// Historique:
//    cree le 20/01/2012

class A {
   void x() {
   }
}

int var;
A a;
{
   var = a * 1;
}